fix nowrap

--- a/public/stylesheets/elements.css
+++ b/public/stylesheets/elements.css
@@ -197,7 +197,6 @@ a {
 	padding-right: 10px;
 	padding-top: 2px;
 	padding-bottom: 2px;
-	white-space: nowrap;
 }
 
 .tbl-show-link:hover {
